Fix code horizontal scrolling on small screens

--- a/pub/css/screen_overrides.css
+++ b/pub/css/screen_overrides.css
@@ -4,7 +4,7 @@ div .highlight {
 	max-width: 95%;
 	max-height: 350px;
 	overflow-y: auto;
-	overflow-x: hidden;
+	overflow-x: auto;
 }
 .toc-list-h3 {
     display: none;
